--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "@types/node": "^16.18.111",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
-    "@uiw/react-codemirror": "^4.23.5",
     "antd": "^5.21.1",
     "axios": "^1.7.7",
-    "codemirror": "^6.0.1",
+    "markdown-it": "^14.1.0",
     "monaco-editor": "^0.52.0",
     "monaco-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-markdown": "^8.0.6",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^7.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -52,6 +57,8 @@
     ]
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
